# ChangeLog for dev-ruby/builder
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/builder/ChangeLog,v 1.51 2010/10/12 15:29:37 armin76 Exp $

  12 Oct 2010; Raúl Porcel <armin76@gentoo.org> builder-2.1.2-r1.ebuild:
  s390 stable

  30 Sep 2010; Brent Baude <ranger@gentoo.org> builder-2.1.2-r1.ebuild:
  Marking builder-2.1.2-r1 ppc64 for bug 321413

  28 Sep 2010; Brent Baude <ranger@gentoo.org> builder-2.1.2-r1.ebuild:
  Marking builder-2.1.2-r1 ppc for bug 321413

  28 Aug 2010; Raúl Porcel <armin76@gentoo.org> builder-2.1.2-r1.ebuild:
  ia64/sparc stable wrt #321413

  23 Jul 2010; Tobias Klausmann <klausman@gentoo.org>
  builder-2.1.2-r1.ebuild:
  Stable on alpha, bug #321413

  30 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  builder-2.1.2-r1.ebuild:
  x86 stable wrt bug #321413

  29 Jun 2010; Christoph Mende <angelos@gentoo.org> builder-2.1.2-r1.ebuild:
  Stable on amd64 wrt bug #321413

  26 Jun 2010; Hans de Graaff <graaff@gentoo.org> builder-2.1.2-r1.ebuild,
  builder-2.1.2-r2.ebuild, +files/builder-2.1.2-fix-tests.patch:
  Make sure tests work regardless of load order.

  14 Jun 2010; Hans de Graaff <graaff@gentoo.org> +builder-2.1.2-r1.ebuild,
  builder-2.1.2-r2.ebuild:
  Add back this version because it is the stable candidate, later
  stabilization of hppa notwithstanding.

  13 Jun 2010; Hans de Graaff <graaff@gentoo.org> -builder-2.1.2-r1.ebuild:
  Remove old version.

  10 Jun 2010; Jeroen Roovers <jer@gentoo.org> builder-2.1.2-r2.ebuild:
  Stable for HPPA (bug #321413).

*builder-2.1.2-r2 (30 May 2010)

  30 May 2010; Hans de Graaff <graaff@gentoo.org> builder-2.1.2-r1.ebuild,
  +builder-2.1.2-r2.ebuild:
  Revision bump to be able to drop ree18 from builder-2.1.2-r1 so that it
  can be stabilized in accordance with bug 321413.

  22 May 2010; Alex Legler <a3li@gentoo.org> builder-2.1.2-r1.ebuild:
  Add REE18 support

  22 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>