@@ -1,15 +1,0 @@
-# Copyright 1999-2009 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/builder/Attic/builder-2.1.2.ebuild,v 1.7 2009/06/07 17:39:44 armin76 Exp $
-
-inherit ruby gems
-
-DESCRIPTION="A builder to facilitate programatic generation of XML markup"
-HOMEPAGE="http://rubyforge.org/projects/builder/"
-
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="alpha amd64 ~arm hppa ia64 ppc ppc64 ~s390 sparc x86 ~x86-fbsd"
-IUSE=""
-
-DEPEND=">=dev-lang/ruby-1.8.2"
