@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/json
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/json/ChangeLog,v 1.46 2010/10/10 13:06:44 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/json/ChangeLog,v 1.47 2010/10/31 08:28:41 graaff Exp $
+
+  31 Oct 2010; Hans de Graaff <graaff@gentoo.org> -json-1.4.3-r2.ebuild:
+  Remove old version.
 
   10 Oct 2010; Tobias Klausmann <klausman@gentoo.org> json-1.4.6.ebuild:
   Keyworded on alpha, bug #325465
