@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/term-ansicolor
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/term-ansicolor/ChangeLog,v 1.11 2010/10/25 00:18:21 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/term-ansicolor/ChangeLog,v 1.12 2010/10/31 08:30:35 graaff Exp $
+
+  31 Oct 2010; Hans de Graaff <graaff@gentoo.org>
+  -term-ansicolor-1.0.5.ebuild:
+  Remove old version.
 
   25 Oct 2010; Jeroen Roovers <jer@gentoo.org>
   term-ansicolor-1.0.5-r1.ebuild:
