@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/builder
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/builder/ChangeLog,v 1.51 2010/10/12 15:29:37 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/builder/ChangeLog,v 1.52 2010/10/31 08:24:38 graaff Exp $
+
+  31 Oct 2010; Hans de Graaff <graaff@gentoo.org> -builder-2.1.2.ebuild:
+  Remove old version.
 
   12 Oct 2010; Raúl Porcel <armin76@gentoo.org> builder-2.1.2-r1.ebuild:
   s390 stable
